--- a/report/report_template.tex
+++ b/report/report_template.tex
@@ -69,11 +69,40 @@
 		\end{Large} \vspace{2cm}
 		\begin{Large} Academic Year 2024-2025 \end{Large}
 		\par\end{center}
-
-\end{titlepage}
-
+		
+	\end{titlepage}
+	
 \tableofcontents
 \newpage
+
+\section{Introduction}
+
+\section{System Overview}
+
+\section{Implementation details}
+
+\section{Evaluation}
+
+\section{Dataset description}
+
+\section{Results summary}
+
+\section{Individual contributions}
+
+\section{Conclusion}
+
+
+\begin{thebibliography}{1}
+	
+% 	\bibitem{sx1509}
+% 	SX1507/SX1508/SX1509. 2025. \textit{Sparkfun} [online]. [accessed 2025-4-22]. Available at: https://cdn.sparkfun.com/datasheets/BreakoutBoards/sx1509.pdf
+	
+% 	\bibitem{line_sensor}
+% 	Pololu line sensor. 2025. \textit{Pololu.com} [online]. [accessed 2025-4-22]. Available at: https://www.pololu.com/docs/pdf/0J12/QTR-8x.pdf
+
+\end{thebibliography}
+
+
 
 % \section{Project overview}
 % 	\paragraph{}
@@ -182,13 +211,4 @@
 		
 
 
-% \begin{thebibliography}{1}
-	
-% 	\bibitem{sx1509}
-% 	SX1507/SX1508/SX1509. 2025. \textit{Sparkfun} [online]. [accessed 2025-4-22]. Available at: https://cdn.sparkfun.com/datasheets/BreakoutBoards/sx1509.pdf
-	
-% 	\bibitem{line_sensor}
-% 	Pololu line sensor. 2025. \textit{Pololu.com} [online]. [accessed 2025-4-22]. Available at: https://www.pololu.com/docs/pdf/0J12/QTR-8x.pdf
-
-%\end{thebibliography}
 \end{document}
