--- a/latex/_result_displayer_8hpp_source.tex
+++ b/latex/_result_displayer_8hpp_source.tex
@@ -24,7 +24,7 @@
 \DoxyCodeLine{00040\ }
 \DoxyCodeLine{00044\ \ \ \ \ \mbox{\hyperlink{class_result_displayer_af40587f6a393ad35316ba8c48cfabd09}{\string~ResultDisplayer}}()\ =\ \textcolor{keywordflow}{default};}
 \DoxyCodeLine{00045\ }
-\DoxyCodeLine{00046\ \ \ \ \ \textcolor{comment}{//\ Future:\ Add\ methods\ for\ graphical\ or\ textual\ result\ display}}
+\DoxyCodeLine{00046\ \ \ \ \ cv::Mat\ GetPlot(\textcolor{comment}{/*input\_dataset,\ xlabel,\ ylabel*/});}
 \DoxyCodeLine{00047\ \};}
 \DoxyCodeLine{00048\ }
 \DoxyCodeLine{00049\ \textcolor{preprocessor}{\#endif\ }\textcolor{comment}{/*\ ResultDisplayer\_hpp\ */}\textcolor{preprocessor}{}}
