--- a/latex/class_preprocessing.tex
+++ b/latex/class_preprocessing.tex
@@ -88,6 +88,7 @@ Loads a new frame into the processor.
 \end{DoxyParams}
 
 
-The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
+The documentation for this class was generated from the following files\+:\begin{DoxyCompactItemize}
 \item 
-include/File\+Loader.\+hpp\end{DoxyCompactItemize}
+include/File\+Loader.\+hpp\item 
+src/File\+Loader.\+cpp\end{DoxyCompactItemize}
