--- a/latex/md__r_e_a_d_m_e.tex
+++ b/latex/md__r_e_a_d_m_e.tex
@@ -24,10 +24,11 @@ The application processes input frame-\/by-\/frame, extracts spatial and geometr
 \end{DoxyItemize}\hypertarget{md__r_e_a_d_m_e_autotoc_md3}{}\doxysubsection{\texorpdfstring{Miroslaw}{Miroslaw}}\label{md__r_e_a_d_m_e_autotoc_md3}
 
 \begin{DoxyItemize}
-\item {\ttfamily \doxylink{class_feature_detector}{Feature\+Detector}} – Object detection using Haar cascades ~\newline
+\item {\ttfamily Feature\+Detector} – Object detection using Haar cascades ~\newline
 
 \item {\ttfamily Feature\+Processor\+And\+Classifier} – Feature extraction and shot type classification logic ~\newline
 
+\item 
 \end{DoxyItemize}\hypertarget{md__r_e_a_d_m_e_autotoc_md4}{}\doxysubsection{\texorpdfstring{Peter}{Peter}}\label{md__r_e_a_d_m_e_autotoc_md4}
 
 \begin{DoxyItemize}
@@ -52,7 +53,7 @@ The application processes input frame-\/by-\/frame, extracts spatial and geometr
 \item Do not use static varibles inside classes
 \item Respect dataflow and do not edit it without telling others
 \end{DoxyItemize}\hypertarget{md__r_e_a_d_m_e_autotoc_md8}{}\doxysection{\texorpdfstring{📄 Final Project Report}{📄 Final Project Report}}\label{md__r_e_a_d_m_e_autotoc_md8}
-{\itshape Here is report structure derived from example project in moodle}\hypertarget{md__r_e_a_d_m_e_autotoc_md9}{}\doxysubsection{\texorpdfstring{1. Title Page}{1. Title Page}}\label{md__r_e_a_d_m_e_autotoc_md9}
+{\itshape Here is report structure derived from example project in moodle}\hypertarget{md__r_e_a_d_m_e_autotoc_md9}{}\doxysubsection{\texorpdfstring{1. Title Page -\/ Marek}{1. Title Page -\/ Marek}}\label{md__r_e_a_d_m_e_autotoc_md9}
 
 \begin{DoxyItemize}
 \item {\bfseries{Project title}}\+: Film Shot Type Classification ~\newline
@@ -66,7 +67,7 @@ The application processes input frame-\/by-\/frame, extracts spatial and geometr
 \end{DoxyItemize}
 
 \DoxyHorRuler{0}
-\hypertarget{md__r_e_a_d_m_e_autotoc_md11}{}\doxysubsection{\texorpdfstring{2. Introduction}{2. Introduction}}\label{md__r_e_a_d_m_e_autotoc_md11}
+\hypertarget{md__r_e_a_d_m_e_autotoc_md11}{}\doxysubsection{\texorpdfstring{2. Introduction -\/ Miroslaw}{2. Introduction -\/ Miroslaw}}\label{md__r_e_a_d_m_e_autotoc_md11}
 
 \begin{DoxyItemize}
 \item Brief background on the problem domain (e.\+g., film analysis, automatic metadata generation) ~\newline
@@ -78,7 +79,7 @@ The application processes input frame-\/by-\/frame, extracts spatial and geometr
 \end{DoxyItemize}
 
 \DoxyHorRuler{0}
-\hypertarget{md__r_e_a_d_m_e_autotoc_md13}{}\doxysubsection{\texorpdfstring{3. System Overview}{3. System Overview}}\label{md__r_e_a_d_m_e_autotoc_md13}
+\hypertarget{md__r_e_a_d_m_e_autotoc_md13}{}\doxysubsection{\texorpdfstring{3. System Overview -\/ Marek}{3. System Overview -\/ Marek}}\label{md__r_e_a_d_m_e_autotoc_md13}
 
 \begin{DoxyItemize}
 \item High-\/level description of the system pipeline ~\newline
@@ -97,7 +98,7 @@ The application processes input frame-\/by-\/frame, extracts spatial and geometr
 \end{DoxyItemize}
 
 \DoxyHorRuler{0}
-\hypertarget{md__r_e_a_d_m_e_autotoc_md15}{}\doxysubsection{\texorpdfstring{4. Implementation Details}{4. Implementation Details}}\label{md__r_e_a_d_m_e_autotoc_md15}
+\hypertarget{md__r_e_a_d_m_e_autotoc_md15}{}\doxysubsection{\texorpdfstring{4. Implementation Details -\/ Everyone describes his part}{4. Implementation Details -\/ Everyone describes his part}}\label{md__r_e_a_d_m_e_autotoc_md15}
 
 \begin{DoxyItemize}
 \item Technical breakdown of each module ~\newline
@@ -111,7 +112,7 @@ The application processes input frame-\/by-\/frame, extracts spatial and geometr
 \end{DoxyItemize}
 
 \DoxyHorRuler{0}
-\hypertarget{md__r_e_a_d_m_e_autotoc_md17}{}\doxysubsection{\texorpdfstring{5. Evaluation}{5. Evaluation}}\label{md__r_e_a_d_m_e_autotoc_md17}
+\hypertarget{md__r_e_a_d_m_e_autotoc_md17}{}\doxysubsection{\texorpdfstring{5. Evaluation -\/ Peter}{5. Evaluation -\/ Peter}}\label{md__r_e_a_d_m_e_autotoc_md17}
 \hypertarget{md__r_e_a_d_m_e_autotoc_md18}{}\doxysubsubsection{\texorpdfstring{Quantitative Evaluation}{Quantitative Evaluation}}\label{md__r_e_a_d_m_e_autotoc_md18}
 
 \begin{DoxyItemize}
@@ -132,7 +133,7 @@ The application processes input frame-\/by-\/frame, extracts spatial and geometr
 \end{DoxyItemize}
 
 \DoxyHorRuler{0}
-\hypertarget{md__r_e_a_d_m_e_autotoc_md21}{}\doxysubsection{\texorpdfstring{6. Dataset Description}{6. Dataset Description}}\label{md__r_e_a_d_m_e_autotoc_md21}
+\hypertarget{md__r_e_a_d_m_e_autotoc_md21}{}\doxysubsection{\texorpdfstring{6. Dataset Description -\/ Miroslaw}{6. Dataset Description -\/ Miroslaw}}\label{md__r_e_a_d_m_e_autotoc_md21}
 
 \begin{DoxyItemize}
 \item Source of the dataset (test images, videos, ground truth) ~\newline
@@ -146,7 +147,7 @@ The application processes input frame-\/by-\/frame, extracts spatial and geometr
 \end{DoxyItemize}
 
 \DoxyHorRuler{0}
-\hypertarget{md__r_e_a_d_m_e_autotoc_md23}{}\doxysubsection{\texorpdfstring{7. Results Summary}{7. Results Summary}}\label{md__r_e_a_d_m_e_autotoc_md23}
+\hypertarget{md__r_e_a_d_m_e_autotoc_md23}{}\doxysubsection{\texorpdfstring{7. Results Summary -\/ Peter}{7. Results Summary -\/ Peter}}\label{md__r_e_a_d_m_e_autotoc_md23}
 
 \begin{DoxyItemize}
 \item General observations ~\newline
@@ -175,7 +176,7 @@ Member 2   &e.\+g., evaluation, testing, visualization   &\\\cline{1-3}
 
 
 \DoxyHorRuler{0}
-\hypertarget{md__r_e_a_d_m_e_autotoc_md27}{}\doxysubsection{\texorpdfstring{9. Conclusion}{9. Conclusion}}\label{md__r_e_a_d_m_e_autotoc_md27}
+\hypertarget{md__r_e_a_d_m_e_autotoc_md27}{}\doxysubsection{\texorpdfstring{9. Conclusion -\/ Marek}{9. Conclusion -\/ Marek}}\label{md__r_e_a_d_m_e_autotoc_md27}
 
 \begin{DoxyItemize}
 \item Final thoughts and achievements ~\newline
