--- a/latex/refman.tex
+++ b/latex/refman.tex
@@ -243,9 +243,9 @@
 \input{structclassification__result}
 \input{struct_classification_result}
 \input{struct_detected_feature}
-\input{class_feature_detector}
 \input{class_film_statistics}
 \input{struct_film_statistics_eval_config}
+\input{class_haar_detector}
 \input{class_image_loader}
 \input{class_input_source}
 \input{classopen_c_v__lib}
@@ -253,17 +253,19 @@
 \input{class_preprocessing}
 \input{class_result_displayer}
 \input{class_shot_classifier}
+\input{class_shot_evaluator}
 \input{class_shot_feature_extractor}
 \input{struct_shot_features}
 \input{class_test_dataset_eval}
 \input{class_video_loader}
 \chapter{File Documentation}
-\input{_feature_detector_8hpp_source}
 \input{_feature_proccesor_and_classifier_8hpp_source}
 \input{_file_loader_8hpp_source}
-\input{_film_shot_classifier_8hpp_source}
 \input{_film_statistic_eval_8hpp_source}
+\input{_haar_detector_8hpp_source}
 \input{_result_displayer_8hpp_source}
+\input{_shot_classifier_8hpp_source}
+\input{_shot_evaluator_8hpp_source}
 \input{_test_dataset_eval_8hpp_source}
 \input{_user_structs_8hpp_source}
 \input{open_c_v__lib_8hpp_source}
