--- a/latex/class_result_displayer.tex
+++ b/latex/class_result_displayer.tex
@@ -16,7 +16,10 @@ Provides graphical or textual output for film analysis results.
 \begin{DoxyCompactList}\small\item\em Constructs the displayer with a copy of the film statistics. \end{DoxyCompactList}\item 
 \Hypertarget{class_result_displayer_af40587f6a393ad35316ba8c48cfabd09}\label{class_result_displayer_af40587f6a393ad35316ba8c48cfabd09} 
 {\bfseries \texorpdfstring{$\sim$}{\string~}\+Result\+Displayer} ()=default
-\begin{DoxyCompactList}\small\item\em Default destructor. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Default destructor. \end{DoxyCompactList}\item 
+\Hypertarget{class_result_displayer_a24531dbae070c96b9b0774b0a0219c44}\label{class_result_displayer_a24531dbae070c96b9b0774b0a0219c44} 
+cv\+::\+Mat {\bfseries Get\+Plot} ()
+\end{DoxyCompactItemize}
 \doxysubsubsection*{Private Attributes}
 \begin{DoxyCompactItemize}
 \item 
