--- a/latex/files.tex
+++ b/latex/files.tex
@@ -1,11 +1,12 @@
 \doxysection{File List}
 Here is a list of all documented files with brief descriptions\+:\begin{DoxyCompactList}
-\item\contentsline{section}{include/\mbox{\hyperlink{_feature_detector_8hpp_source}{Feature\+Detector.\+hpp}} }{\pageref{_feature_detector_8hpp_source}}{}
 \item\contentsline{section}{include/\mbox{\hyperlink{_feature_proccesor_and_classifier_8hpp_source}{Feature\+Proccesor\+And\+Classifier.\+hpp}} }{\pageref{_feature_proccesor_and_classifier_8hpp_source}}{}
 \item\contentsline{section}{include/\mbox{\hyperlink{_file_loader_8hpp_source}{File\+Loader.\+hpp}} }{\pageref{_file_loader_8hpp_source}}{}
-\item\contentsline{section}{include/\mbox{\hyperlink{_film_shot_classifier_8hpp_source}{Film\+Shot\+Classifier.\+hpp}} }{\pageref{_film_shot_classifier_8hpp_source}}{}
 \item\contentsline{section}{include/\mbox{\hyperlink{_film_statistic_eval_8hpp_source}{Film\+Statistic\+Eval.\+hpp}} }{\pageref{_film_statistic_eval_8hpp_source}}{}
+\item\contentsline{section}{include/\mbox{\hyperlink{_haar_detector_8hpp_source}{Haar\+Detector.\+hpp}} }{\pageref{_haar_detector_8hpp_source}}{}
 \item\contentsline{section}{include/\mbox{\hyperlink{_result_displayer_8hpp_source}{Result\+Displayer.\+hpp}} }{\pageref{_result_displayer_8hpp_source}}{}
+\item\contentsline{section}{include/\mbox{\hyperlink{_shot_classifier_8hpp_source}{Shot\+Classifier.\+hpp}} }{\pageref{_shot_classifier_8hpp_source}}{}
+\item\contentsline{section}{include/\mbox{\hyperlink{_shot_evaluator_8hpp_source}{Shot\+Evaluator.\+hpp}} }{\pageref{_shot_evaluator_8hpp_source}}{}
 \item\contentsline{section}{include/\mbox{\hyperlink{_test_dataset_eval_8hpp_source}{Test\+Dataset\+Eval.\+hpp}} }{\pageref{_test_dataset_eval_8hpp_source}}{}
 \item\contentsline{section}{include/\mbox{\hyperlink{_user_structs_8hpp_source}{User\+Structs.\+hpp}} }{\pageref{_user_structs_8hpp_source}}{}
 \item\contentsline{section}{open\+CV\+\_\+lib/\mbox{\hyperlink{open_c_v__lib_8hpp_source}{open\+CV\+\_\+lib.\+hpp}} }{\pageref{open_c_v__lib_8hpp_source}}{}
