--- a/latex/hierarchy.tex
+++ b/latex/hierarchy.tex
@@ -3,9 +3,9 @@ This inheritance list is sorted roughly, but not completely, alphabetically\+:\b
 \item \contentsline{section}{classification\+\_\+result}{\pageref{structclassification__result}}{}
 \item \contentsline{section}{Classification\+Result}{\pageref{struct_classification_result}}{}
 \item \contentsline{section}{Detected\+Feature}{\pageref{struct_detected_feature}}{}
-\item \contentsline{section}{Feature\+Detector}{\pageref{class_feature_detector}}{}
 \item \contentsline{section}{Film\+Statistics}{\pageref{class_film_statistics}}{}
 \item \contentsline{section}{Film\+Statistics\+Eval\+Config}{\pageref{struct_film_statistics_eval_config}}{}
+\item \contentsline{section}{Haar\+Detector}{\pageref{class_haar_detector}}{}
 \item \contentsline{section}{Input\+Source}{\pageref{class_input_source}}{}
 \begin{DoxyCompactList}
 \item \contentsline{section}{Image\+Loader}{\pageref{class_image_loader}}{}
@@ -16,6 +16,7 @@ This inheritance list is sorted roughly, but not completely, alphabetically\+:\b
 \item \contentsline{section}{Preprocessing}{\pageref{class_preprocessing}}{}
 \item \contentsline{section}{Result\+Displayer}{\pageref{class_result_displayer}}{}
 \item \contentsline{section}{Shot\+Classifier}{\pageref{class_shot_classifier}}{}
+\item \contentsline{section}{Shot\+Evaluator}{\pageref{class_shot_evaluator}}{}
 \item \contentsline{section}{Shot\+Feature\+Extractor}{\pageref{class_shot_feature_extractor}}{}
 \item \contentsline{section}{Shot\+Features}{\pageref{struct_shot_features}}{}
 \item \contentsline{section}{Test\+Dataset\+Eval}{\pageref{class_test_dataset_eval}}{}
